# dl_cp

./: DATABASE_GUIDE.md  README.md  SETUP_GUIDE.md  docker-compose.yml  info.txt  render.yaml
backend/: .dockerignore  .env.example  .gitignore  AUTH_README.md  Dockerfile  README.md  main.py  pyproject.toml
backend/company_docs/: current_company_doc.txt
backend/config/: settings.py
backend/resumes/: .gitignore  README.md
backend/src/: add_name_column.py  database.py  db_test.py  helper_funcs.py
backend/src/karmafit_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analysis/: page.tsx
frontend/app/candidate-login/: page.tsx
frontend/app/candidates/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/sign-up/[[...sign-up]]/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: CandidateReport.tsx  CandidateSearch.tsx  DashboardStats.tsx  Navbar.tsx  ParticleBackground.tsx  ResumeChart.tsx  ThemeProvider.tsx
