[project]
name = "karmafit-backend"
version = "0.1.0"
description = "Resume OCR backend using GOT-OCR"
requires-python = ">=3.10"

dependencies = [
    "transformers @ git+https://github.com/huggingface/transformers.git",
    "accelerate>=0.30.0",
    "pillow>=10.0.0",
    "pdf2image>=1.17.0",
    "python-docx>=1.1.0",
    "dotenv"
]

# pytorch = "https://download.pytorch.org/whl/cu121"